--- a/practica-4/Parte-A/Makefile
+++ b/practica-4/Parte-A/Makefile
@@ -1,1 +1,8 @@
-a
+obj-m = modlist.o
+
+all:
+	make -C /lib/modules/$(shell uname -r)/build M="$(PWD)" modules
+
+clean:
+	make -C /lib/modules/$(shell uname -r)/build M="$(PWD)" clean
+
